examples/test/testpolicy2383.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2383
  namespace: namespace400
spec:
  podSelector:
    matchLabels:
      key46: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value3
          key18: value42
          key34: value9
      podSelector:
        matchLabels:
          key47: value8
